Weird volumetric artifacts in Cycles (X) rendering #91797

Closed
opened 2021-09-29 03:12:02 +02:00 by Pavel Duong · 16 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1650 Super

Blender Version
Broken: 2.93.4LTS (CUDA) and c53ffda8a4 (blender-3.0.0-alpha+master.c53ffda8a496-windows.amd64-release)
Worked: 2.93.4LTS (CPU)

Short description of error
Rendering volumetric under conditions provided in the example blend file below produces different results compared depending on whether Cycles/Cycles X and/or CPU/CUDA is used.

Here is a render from Blender 2.93.4 LTS using the CPU, which I consider correct:
(Note: I am not completely sure if the issue occurs a bit here as well on the left side of the render)
volumetrics_lts_cpu.png


Here are the renders that I consider broken:

Blender 2.93.4 LTS using CUDA:
volumetrics_lts_cuda.png

Blender 3.0.0 Alpha using CPU:
volumetrics_alpha_cpu.png

Blender 3.0.0 Alpha using CUDA:
volumetrics_alpha_cuda.png

Exact steps for others to reproduce the error

  1. Open the attached scene
  2. Render the scene (If LTS, then use CUDA. If CyclesX builds then either will do)
  3. Notice the artifacts

volumetrics.blend

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce GTX 1650 Super **Blender Version** Broken: `2.93.4LTS` (CUDA) and c53ffda8a496 (`blender-3.0.0-alpha+master.c53ffda8a496-windows.amd64-release`) Worked: `2.93.4LTS` (CPU) **Short description of error** Rendering volumetric under conditions provided in the example blend file below produces different results compared depending on whether Cycles/Cycles X and/or CPU/CUDA is used. Here is a render from *Blender 2.93.4 LTS* using the CPU, which I consider correct: (*Note: I am not completely sure if the issue occurs a bit here as well on the left side of the render*) ![volumetrics_lts_cpu.png](https://archive.blender.org/developer/F10660502/volumetrics_lts_cpu.png) --- Here are the renders that I consider broken: *Blender 2.93.4 LTS* using CUDA: ![volumetrics_lts_cuda.png](https://archive.blender.org/developer/F10660560/volumetrics_lts_cuda.png) *Blender 3.0.0 Alpha* using CPU: ![volumetrics_alpha_cpu.png](https://archive.blender.org/developer/F10660562/volumetrics_alpha_cpu.png) *Blender 3.0.0 Alpha* using CUDA: ![volumetrics_alpha_cuda.png](https://archive.blender.org/developer/F10660564/volumetrics_alpha_cuda.png) **Exact steps for others to reproduce the error** 1. Open the attached scene 2. Render the scene (If LTS, then use CUDA. If CyclesX builds then either will do) 3. Notice the artifacts [volumetrics.blend](https://archive.blender.org/developer/F10660466/volumetrics.blend)
Author

Added subscriber: @vignette

Added subscriber: @vignette

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

By the way, Branched Path Tracing in 2.93.4 doesn't have this problem.

By the way, Branched Path Tracing in 2.93.4 doesn't have this problem.
Member

Added subscriber: @leesonw

Added subscriber: @leesonw
Member

I did some investigating here and it seems you can remove the fog cube and just focus on the mist it seems like there are some differences when rendering the meshes. For 2.93 it looks like this
volumetrics_2.94.png
and for 3.0 is looks like this
volumetrics_3.0.png
to get this I just rendered the surfaces with a diffuse BSDF. It seems the geometry is behaving differently. Zooming in on the bottom right corner for 2.93 I get
vol_close_up_293.png
and for 3.0 I get
vol_close_up_30.png
I think maybe something about the geometry is causing the issues.

I did some investigating here and it seems you can remove the fog cube and just focus on the mist it seems like there are some differences when rendering the meshes. For 2.93 it looks like this ![volumetrics_2.94.png](https://archive.blender.org/developer/F11110553/volumetrics_2.94.png) and for 3.0 is looks like this ![volumetrics_3.0.png](https://archive.blender.org/developer/F11110610/volumetrics_3.0.png) to get this I just rendered the surfaces with a diffuse BSDF. It seems the geometry is behaving differently. Zooming in on the bottom right corner for 2.93 I get ![vol_close_up_293.png](https://archive.blender.org/developer/F11111016/vol_close_up_293.png) and for 3.0 I get ![vol_close_up_30.png](https://archive.blender.org/developer/F11111033/vol_close_up_30.png) I think maybe something about the geometry is causing the issues.

I bet it's due to the shadow terminator solution (in object properties)
image.png

I bet it's due to the shadow terminator solution (in object properties) ![image.png](https://archive.blender.org/developer/F11111326/image.png)
Member

Maybe, it kind of seems like the shadow ray are hitting a different geometry.

Maybe, it kind of seems like the shadow ray are hitting a different geometry.
William Leeson self-assigned this 2021-10-25 14:54:16 +02:00
Author

I have done some experimenting and found out that the artifacts of overlapping volumetrics happens only (or at least in this case) if the mesh is combined.

On the left the cubes are stacked into each other and are separate objects, while on the right all the cubes are combined into a single mesh. Also from what I've seen, there is a subtle difference between CPU and CUDA render on the left cube (the CUDA render has a dark spot in the middle).

Test File
Using Blender version: 3.0.0 Beta, branch: master, commit date: 2021-11-11 18:49, hash: bd734cc4419a, type: release
volumetrics_2.blend

CPU Render
cpu_300.png

CUDA Render
gpu_compute_300.png

I have done some experimenting and found out that the artifacts of overlapping volumetrics happens only (or at least in this case) if the mesh is combined. On the left the cubes are stacked into each other and are separate objects, while on the right all the cubes are combined into a single mesh. Also from what I've seen, there is a subtle difference between CPU and CUDA render on the left cube (the CUDA render has a dark spot in the middle). **Test File** Using Blender version: `3.0.0 Beta, branch: master, commit date: 2021-11-11 18:49, hash: bd734cc4419a, type: release` [volumetrics_2.blend](https://archive.blender.org/developer/F11808812/volumetrics_2.blend) **CPU Render** ![cpu_300.png](https://archive.blender.org/developer/F11808804/cpu_300.png) **CUDA Render** ![gpu_compute_300.png](https://archive.blender.org/developer/F11808800/gpu_compute_300.png)

Added subscriber: @brecht

Added subscriber: @brecht

Marking as high since this is a regression, so worth at least spending some time on before the 3.0 release.

Marking as high since this is a regression, so worth at least spending some time on before the 3.0 release.

This issue was referenced by blender/cycles@81412d3c16

This issue was referenced by blender/cycles@81412d3c166bc44b7eaea2ee6defd4f6045d52ff

This issue was referenced by fd2a155d06

This issue was referenced by fd2a155d068fdd3e6a6c3b4d58772b1dc9921291

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by None@62756

This issue was referenced by None@62756
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91797
No description provided.