Fix part of T91797: Cycles CPU and GPU render differences with camera inside volume